[Google Fonts] Generate urls from proto fetched from fonts.google.com (#56)
* Read files from protobuf

* remove existing data file

* add contributing.md guide

* version bump

--- a/generator/google_fonts.tmpl
+++ b/generator/google_fonts.tmpl
@@ -40,7 +40,7 @@ class GoogleFonts {
   }) {
     final fonts = <GoogleFontsVariant, String>{
       {{#fontUrls}}
-      GoogleFontsVariant.fromString('{{variant}}'): '{{url}}',
+      GoogleFontsVariant(fontWeight: FontWeight.w{{variantWeight}}, fontStyle: FontStyle.{{variantStyle}}): '{{url}}',
       {{/fontUrls}}
     };
 
