--- a/generator/google_fonts.tmpl
+++ b/generator/google_fonts.tmpl
@@ -9,6 +9,7 @@
 import 'dart:ui' as ui;
 import 'package:flutter/material.dart';
 import 'src/google_fonts_base.dart';
+import 'src/google_fonts_descriptor.dart';
 import 'src/google_fonts_variant.dart';
 
 /// A collection of properties used to specify custom behavior of the GoogleFonts library.
@@ -56,9 +57,9 @@ class GoogleFonts {
     TextDecorationStyle decorationStyle,
     double decorationThickness,
   }) {
-    final fonts = <GoogleFontsVariant, String>{
+    final fonts = <GoogleFontsVariant, GoogleFontsFile>{
       {{#fontUrls}}
-      GoogleFontsVariant(fontWeight: FontWeight.w{{variantWeight}}, fontStyle: FontStyle.{{variantStyle}}): '{{url}}',
+      GoogleFontsVariant(fontWeight: FontWeight.w{{variantWeight}}, fontStyle: FontStyle.{{variantStyle}},): GoogleFontsFile('{{hash}}', {{length}},),
       {{/fontUrls}}
     };
 
